--- a/package.json
+++ b/package.json
@@ -1,23 +1,8 @@
 {
-  "name": "try",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "electron": "^5.0.6"
-  },
+  "name": "your-app",
+  "version": "0.1.0",
+  "main": "main.js",
   "scripts": {
     "start": "electron ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pablodezutter/Electron.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pablodezutter/Electron/issues"
-  },
-  "homepage": "https://github.com/pablodezutter/Electron#readme"
+  }
 }
